# cucu-reinforcement-learning

./: .gitignore  LICENSE  README.md  pyproject.toml  requirements.txt
analysis/: probability_analysis.py  probability_visualization.py  strategy_analysis.py
cucu_rl/: __init__.py  cli.py
models/: best_model.pt  checkpoint_10000.pt  checkpoint_100000.pt  checkpoint_1000000.pt  checkpoint_110000.pt  checkpoint_120000.pt  checkpoint_130000.pt  checkpoint_140000.pt  checkpoint_150000.pt  checkpoint_160000.pt  checkpoint_170000.pt  checkpoint_180000.pt  checkpoint_190000.pt  checkpoint_20000.pt  checkpoint_200000.pt  checkpoint_210000.pt  checkpoint_220000.pt  checkpoint_230000.pt  checkpoint_240000.pt  checkpoint_250000.pt  checkpoint_260000.pt  checkpoint_270000.pt  checkpoint_280000.pt  checkpoint_290000.pt  checkpoint_30000.pt  checkpoint_300000.pt  checkpoint_310000.pt  checkpoint_320000.pt  checkpoint_330000.pt  checkpoint_340000.pt  checkpoint_350000.pt  checkpoint_360000.pt  checkpoint_370000.pt  checkpoint_380000.pt  checkpoint_390000.pt  checkpoint_40000.pt  checkpoint_400000.pt  checkpoint_410000.pt  checkpoint_420000.pt  checkpoint_430000.pt  (+62 more)
src/: __init__.py  cards.py  cucu_env.py  multi_agent.py
src/agents/: __init__.py  base_agent.py  random_agent.py  rl_agent.py  threshold_agent.py
src/models/: __init__.py  actor_critic.py  gae.py  ppo.py  replay_buffer.py
src/utils/: __init__.py  logger.py  metrics.py
training/: evaluate.py  monte_carlo.py  self_play.py
visualization/: render_game.py  utils.py
